--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,7 @@
 {
   "tasks": {
     "dev": "deno run --watch main.ts",
+    "run": "deno run --allow-net --allow-read --allow-write main.ts",
     "compile": "deno compile --allow-net --allow-read --allow-write --output=github-activity main.ts"
   },
   "imports": {
